<resources>
    <string name="app_name">Customer</string>
    <string name="text_order_add">Для вызова мастера создайте заявку. Укажите кратко проблему. В строке адреса укажите город и улицу или квартал. Номер дома и квартиру сообщите мастеру по телефону</string>
    <string name="hint_problem">Проблема: замена дверного замка</string>
    <string name="hint_address">Адрес: город, улица или квартал</string>
    <string name="hint_name">Имя заказчика</string>
    <string name="hint_phone">Контактный телефон</string>
    <string name="hint_deadline">Дата выполнения работ: 2023-01-01</string>
    <string name="btn_save_order">Отправить заявку</string>
    <string name="btn_order">Подать еще заявку</string>
    <string name="btn_pay_order">Оплатить заявку</string>
    <string name="tv_carta">0000 0000 0000 0000</string>
    <string name="btn_copy">Копировать  № карты</string>
    <string name="tv_number_carta">№ карты:</string>
    <string name="tv_pay">Скопируйте в буфер обмена номер банковской карты и нажнмите кнопку ОПЛАТИТЬ ЗАЯВКУ. В открывшемся окне выберите свой банк и оплатите выполненые работы по вашей заявке</string>
</resources>