<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/text_order_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_order_add"
            android:gravity="center_horizontal"
            android:textStyle="italic"
            android:textColor="@color/btn_master"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/et_problem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textColorHint="@color/hint"
            android:hint="@string/hint_problem" />
        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="18sp"
            android:hint="@string/hint_address" />
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="18sp"
            android:hint="@string/hint_name"/>
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:inputType="number"
            android:textSize="18sp"
            android:hint="@string/hint_phone"/>
        <EditText
            android:id="@+id/et_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:inputType="date"
            android:textSize="18sp"
            android:hint="@string/hint_deadline"/>

        <Button
            android:id="@+id/btn_save_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_master_and_press"
            android:onClick="onClickSaveOrder"
            android:text="@string/btn_save_order"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_master_and_press"
            android:onClick="onClickOrder"
            android:text="@string/btn_order"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_pay_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_master_and_press"
            android:onClick="onClickPayOrder"
            android:text="@string/btn_pay_order"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>



</RelativeLayout>