<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_pay"
            android:gravity="center_horizontal"
            android:textStyle="italic"
            android:textColor="@color/btn_master"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">



            <TextView

                android:id="@+id/tv_carta_master"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:textStyle="bold"
                android:text="@string/tv_carta" />

            <Button
                android:id="@+id/btn_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_master_and_press"
                android:onClick="onClickCopyCart"
                android:layout_weight="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/btn_copy" />

        </LinearLayout>
        <Button
            android:id="@+id/btn_pay_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_master_and_press"
            android:onClick="onClickPayBank"
            android:text="@string/btn_pay_order"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>